--- a/about.html
+++ b/about.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="project.html" class="logo">
+        <a href="index.html" class="logo">
         Online Store
         </a>
         <div class="nav-links-a" id="navlinks">
             <i class="fa fa-close" aria-hidden="true" onclick="hideMenu()"></i>
-            <ul><li><a href="project.html">Home</li></a>
+            <ul><li><a href="index.html">Home</li></a>
             <li><a href="product.html">Shop</li></a>
             <li><a href="about.html">About</li></a>
             <li><a href="contact.html">Contact us</li></a>
